@startuml Diagrama ER - Concesionario

skinparam linetype ortho

entity Empresa {
    NIT <<PK>>
    Nombre
    Direccion
    Telefono
    Correo
}

entity RegistroEmpresa {
    Empresa <<PK, FK>>
    FechaRegistro
    Tipo
}

entity Concesionario {
    RegistroEmpresa <<PK, FK>>
}

entity ServicioOficial {
    RegistroEmpresa <<PK, FK>>
    Concesionario <<FK>>
}

entity Marca {
    Nombre <<PK>>
}

entity MarcaConcesionario {
    Concesionario <<PK, FK>>
    Marca <<PK, FK>>
}

entity Modelo {
    Id <<PK>>
    Marca <<FK>>
    Nombre 
    Precio
}

entity FichaTecnica {
    Modelo <<PK, FK>>
    Cilindraje
    Potencia
    Torque
    Motor
    Combustible
    Carroceria
    Color <<FK>>
}

entity Equipamiento {
    Id <<PK>>
    Modelo <<FK>>
    Accesorio <<FK>>
    EsExtra
    Precio
}

entity Accesorio {
    Id <<PK>>
    Nombre
}

entity Automovil {
    numero_bastidor <<PK>>
    Modelo <<FK>>
    RegistroEmpresa <<FK>>
    Estado
}

entity Venta {
    Id <<PK>>
    Vehiculo <<FK Unique>>
    Vendedor <<FK>>
    FechaEntrega
    FechaVenta
    Matricula
    EsEncargado
    MetodoPago
    PrecioVenta
}

entity ExtraVenta {
    Venta <<PK, FK>>
    Equipamiento <<PK, FK>>
    Precio
}

entity Persona {
    Cedula <<PK>>
    Nombre
    Apellido
    Direccion
    Telefono
    Correo
}

entity Usuario {
    Persona <<PK, FK>>
    NombreUsuario
    Contrasena
    Tipo <<ADMIN, CLIENTE>>
}

entity Vendedor {
    Persona <<PK, FK>>
    RegistroEmpresa <<FK>>
}

entity Descuento {
    Id <<PK>>
    Nombre
    Porcentaje
    Descripcion
}

entity DescuentoAplicado {
    Automovil <<PK, FK>>
    Descuento <<PK, FK>>
}

entity Color {
    Id <<PK>>
    Nombre
}

hide methods

Empresa ||--|| RegistroEmpresa
RegistroEmpresa ||--o| Concesionario
RegistroEmpresa ||--o| ServicioOficial
RegistroEmpresa ||--o{ Vendedor
Concesionario ||--o{ ServicioOficial
Concesionario ||--|{ MarcaConcesionario
Marca ||--o{ MarcaConcesionario
Marca ||--o{ Modelo
Modelo ||--o{ Automovil
Modelo ||--|| FichaTecnica
Modelo ||--|{Equipamiento
Accesorio |o--|{ Equipamiento
Automovil ||--o| Venta
Equipamiento ||--o{ ExtraVenta
Venta ||--o{ ExtraVenta
Vendedor ||--o{ Venta
Automovil ||--o{ DescuentoAplicado
Descuento ||-right-o{ DescuentoAplicado
RegistroEmpresa ||--o{ Automovil
Persona ||--o| Usuario
Persona ||--o| Vendedor
Color ||--o{ FichaTecnica
@enduml